[gd_scene load_steps=2 format=3 uid="uid://bmvvsotalgtj7"]

[ext_resource type="Script" uid="uid://ct2rb6mal0ry7" path="res://RecruitUI.gd" id="1_mvwca"]

[node name="RecruitUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mvwca")

[node name="LeftContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(250, 0)
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
grow_vertical = 2
theme_override_constants/margin_left = 50

[node name="VBoxContainer" type="VBoxContainer" parent="LeftContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Card1" type="Button" parent="LeftContainer/VBoxContainer"]
custom_minimum_size = Vector2(220, 330)
layout_mode = 2
size_flags_horizontal = 4
expand_icon = true

[node name="Card2" type="Button" parent="LeftContainer/VBoxContainer"]
custom_minimum_size = Vector2(220, 330)
layout_mode = 2
size_flags_horizontal = 4
expand_icon = true

[node name="Card3" type="Button" parent="LeftContainer/VBoxContainer"]
custom_minimum_size = Vector2(220, 330)
layout_mode = 2
size_flags_horizontal = 4
expand_icon = true
